Fix issue with PEP overrides